--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,12 @@
     <link rel="shortcut icon" href="/static/img/logo.jpg" >
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/css/my.css">
     <script src="/static/js/bootstrap.js"></script>
     <script src="/static/js/bootstrap.bundle.js"></script>
     <script src="/static/js/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+          integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script>
         /* 设置body高度为屏幕高度*/
         setTimeout(function(){
